# pipulse

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml  screenshots.yml
docs/: 2026-11-03-plan.md  research.md
scripts/: pipulse.service
src/: input.rs  main.rs  metrics.rs  ui.rs
src/display/: hw.rs  mod.rs  sim.rs
