[package]
name = "pipulse"
version = "0.1.0"
edition = "2024"

[dependencies]
display-interface-spi = "0.5"
embedded-graphics = "0.8"
embedded-hal-bus = "0.3.0"
embedded-hal = "1.0.0"
get_if_addrs = "0.5"
linux-embedded-hal = "0.4"
mipidsi = "0.9.0"
rppal = { version = "0.22", features = [ "hal" ] }
thiserror = "2.0"
