[package]
name = "pipulse"
version = "0.1.0"
edition = "2024"
description = "Raspberry Pi system status display for the Adafruit miniPiTFT"

[package.metadata.deb]
copyright = "pipulse contributors"
section = "utils"
priority = "optional"
maintainer-scripts = "debian"
assets = [
    ["target/release/pipulse", "usr/local/bin/pipulse", "755"],
]

[package.metadata.deb.systemd-units]
unit-scripts = "scripts"
enable = true
start = true

[features]
default = ["hw"]
hw  = []
sim = ["dep:embedded-graphics-simulator"]
ci  = []

[dependencies]
embedded-graphics    = "0.8"
embedded-hal         = "1.0.0"
embedded-icon        = { version = "0.3", features = ["mdi"] }
linux-embedded-hal   = "0.4"
sysinfo              = "0.33"
thiserror            = "2.0"
mipidsi              = "0.9.0"
mousefood            = { version = "0.2", default-features = false, features = ["fonts"] }
ratatui              = { version = "0.29", default-features = false, features = ["unstable-widget-ref"] }

[dependencies.embedded-graphics-simulator]
version          = "0.5"
optional         = true
default-features = true
