[package]
name = "pipulse"
version = "0.2.0"
edition = "2024"
description = "Raspberry Pi system status display for the Adafruit miniPiTFT"

[package.metadata.deb]
copyright = "pipulse contributors"
section = "utils"
priority = "optional"
maintainer-scripts = "debian"
assets = [
    ["target/release/pipulse", "usr/local/bin/pipulse", "755"],
]

[package.metadata.deb.systemd-units]
unit-scripts = "scripts"
enable = true
start = true

[features]
default = ["hw"]
hw  = []
sim = ["dep:embedded-graphics-simulator"]
ci  = []

[dependencies]
embedded-graphics = "0.8.2"
embedded-graphics-simulator = { version = "0.8.0", optional = true }
embedded-hal = "1.0.0"
embedded-icon = { version = "0.0.1", default-features = false, features = ["18px", "mdi"] }
linux-embedded-hal = "0.4.1"
sysinfo = "0.38.4"
thiserror = "2.0.18"
mipidsi = "0.10.0"
mousefood = { version = "0.4.0", default-features = false, features = ["fonts"] }
ratatui = { version = "0.30.0", default-features = false, features = ["unstable-widget-ref"] }
